--- a/project-1.html
+++ b/project-1.html
@@ -21,13 +21,13 @@
       <div class="header__content">
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
-            <img
-              src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
+           <!--- <img
+              src="./assets/png/vaishnavi-bobburi.png"
+              alt="Vaishnavi Bobburi Logo Image"
               class="header__logo-img"
-            />
+            />--->
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">vaishnavi bobburi</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,12 +84,12 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Project 1</h1>
+        <h1 class="heading-primary">Intra College Web Application</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-            in numquam incidunt earum quaerat cum fuga, atque similique natus
-            nobis sit.
+            This project is a comprehensive full-stack solution designed to bridge these gaps. 
+            It serves as a dynamic digital hub that fosters collaboration and knowledge exchange,
+             making campus life more connected and informed.
           </p>
         </div>
         <div class="project-cs-hero__cta">
@@ -101,30 +101,20 @@
       <div class="main-container">
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
-            <img
-              src="./assets/jpeg/project-mockup-example.jpeg"
-              alt="Project Image"
-              class="project-details__showcase-img"
-            />
+            
+              <img src="projectImage.png" alt="Intra-College App" class="project-details__showcase-img">
           </div>
           <div class="project-details__content-main">
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Neque alias tenetur minus quaerat
-                aliquid, aut provident blanditiis, deleniti aspernatur ipsam
-                eaque veniam voluptatem corporis vitae mollitia laborum corrupti
-                ullam rem?
+                
               </p>
               <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem?
+                The Intra-College Web Application was born from observing a clear communication gap 
+                within my college ecosystem. Students often struggled to connect with seniors for 
+                guidance, faculty announcements sometimes got lost, 
+                and there was no centralized platform for sharing valuable knowledge about internships, jobs, and new technologies.
               </p>
             </div>
             <div class="project-details__tools-used">
@@ -134,26 +124,26 @@
                 <div class="skills__skill">CSS</div>
                 <div class="skills__skill">JavaScript</div>
                 <div class="skills__skill">React</div>
-                <div class="skills__skill">SASS</div>
+                <div class="skills__skill">Json</div>
                 <div class="skills__skill">GIT</div>
-                <div class="skills__skill">Shopify</div>
-                <div class="skills__skill">Wordpress</div>
+                <div class="skills__skill">Firebase</div>
+                <!--<div class="skills__skill">Wordpress</div>
                 <div class="skills__skill">Google ADS</div>
                 <div class="skills__skill">Facebook Ads</div>
                 <div class="skills__skill">Android</div>
-                <div class="skills__skill">IOS</div>
+                <div class="skills__skill">IOS</div>-->
               </div>
             </div>
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="#"
+                href="https://intracollegewebapplication.web.app"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
               >
               <a
-                href="#"
+                href="https://github.com/Vaishnavi-bobburi/projects"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
@@ -171,21 +161,21 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://linkedin.com/in/vaishnavi-bobburi-a39a78310">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://github.com/Vaishnavi-bobburi">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <!--<a target="_blank" rel="noreferrer" href="">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/twitter-ico.png"
@@ -205,22 +195,22 @@
                   src="./assets/png/insta-ico.png"
                   alt="icon"
                 />
-              </a>
+              </a>-->
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Vaishnavi Bobburi</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              A passionate developer with a strong foundation in both front-end and back-end technologies.
+              problem-solver, and lifelong learner.
             </p>
           </div>
         </div>
 
         <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
+          &copy; @2025. Made by
+          <a rel="noreferrer" target="_blank" href=" #"
+            >Vaishnavi Bobburi</a
           >
         </div>
       </div>
